# beepbeep/challenge_microservice/static/api.yaml
@@ -1,106 +1,197 @@
-swagger: "2.0"
+openapi: 3.0.0
 info:
-  title: Challenges Data Service
-  description: returns info about challenges
+  title: BeepBeep Challenge Microservice
+  description: Returns info about BeepBeep user challenges
   license:
     name: APLv2
     url: https://www.apache.org/licenses/LICENSE-2.0.html
-  version: 0.1.0
-basePath: /api
+  version: 0.1.9
+
+
+servers:
+  - url: 0.0.0.0:5003
+
+components:
+  schemas:
+    Challenge:
+      type: object
+      properties:
+        run_challenged_id:
+          type: integer
+          description: ID of the challenged run
+        run_challenger_id:
+          type: integer
+          description: ID of the challenger run
+        runner_id:
+          type: integer
+          description: The id of the user who made this run
+        start_date:
+          type: integer
+          format: timestamp
+          description: The timestamp when this challenge was made
+        result:
+          type: boolean
+          description: The result of the challenge that can been won or lost
+      required:
+        - run_challenged_id
+        - runner_id
+
+    ResponseChallenge:
+      type: object
+      allOf:
+        - type: object
+          properties:
+            id:
+              type: integer
+              description: The ID of the Challenge
+        - $ref: '#/components/schemas/Challenge'
+
+    Error:
+      type: object
+      properties:
+        response-code:
+          type: integer
+          description: The code of the HTTP response error
+        message:
+          type: string
+          description: Additional description about the error
+      required:
+        - response-code
+        - message
+
+  responses:
+    NotFound:
+      description: The specified resource was not found
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+
+    Unauthorized:
+      description: Unauthorized
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+
+    BadRequest:
+      description: Something went wrong trying to parse the request
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+
 paths:
     /create_challenge:
       post:
         operationId: createChallenge
-        description: Create Challenge
-        produces:
-        - application/json
+        description: Create a new challenge
+        requestBody:
+          description: User has to provide its id and the run_challenged_id
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  runner_id:
+                    type: integer
+                  run_challenged_id:
+                    type: integer
         responses:
-          '200':
-            description: New Challenge id
-            schema:
-                type: integer
-    /challenges/{runner_id}:
+          '204':
+            description: The challenge were added succesfully
+          '400':
+            $ref: '#/components/responses/BadRequest'
+
+    /user/{runner_id}/challenges:
       get:
         operationId: getChallenges
-        description: Get Challenges
-        produces:
-        - application/json
+        description: Get all the challenges of an user
         parameters:
-          - name: runner_id
-            in: path
-            description: ID of Runner
-            required: true
+        - in: path
+          name: runner_id
+          description: ID of User
+          required: true
+          schema:
             type: integer
         responses:
-          '200':
-            description: List of challenges
+          '400':
+            $ref: '#/components/responses/BadRequest'
           '404':
-            description: Not found the specified user so redirect to '/'
-    /challenges/{runner_id}/{challenge_id}:
+            $ref: '#/components/responses/NotFound'
+          '200':
+            description: A, possibly empty, list of challenges
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/ResponseChallenge'
+                  minItems: 0
+
+    /user/{runner_id}/challenges/{challenge_id}:
       get:
         operationId: getChallengeID
-        description: Returns the specified challenge
-        produces:
-        - application/json
+        description: Get The challenge *challenge_id* of the user *runner_id*
         parameters:
-          - name: runner_id
-            in: path
-            description: ID of Runner
+          - in: path
+            name: runner_id
+            description: ID of the user
             required: true
-            type: integer
-          - name: challenge_id
-            in: path
-            description: ID of Challenge
+            schema:
+              type: integer
+          - in: path
+            name: challenge_id
+            description: ID of the Challenge
             required: true
-            type: integer
+            schema:
+              type: integer
         responses:
-          '200':
-            description: Returns specific challenge
           '404':
-            description: Not found the specified challenge so redirect to '/'
- 
-    /complete_challenge/{runner_id}/{challenge_id}:
-      get:
-        operationId: completeChallenge
-        description: Complete Challenge
-        produces:
-        - application/json
-        parameters:
-          - name: runner_id
-            in: path
-            description: ID of Runner
-            required: true
-            type: integer
-          - name: challenge_id
-            in: path
-            description: ID of Challenge
-            required: true
-            type: integer            
-        responses:
+            $ref: '#/components/responses/NotFound'
           '200':
-            description: List of run eligible to complete the challenge or challenge detail
-          '404':
-            description: Not found the specified challenge so redirect to '/'
-      post:
-        operationId: terminateChallenge
-        description: Terminate Challenge
-        produces:
-        - application/json
-        parameters:
-          - name: runner_id
-            in: path
-            description: ID of Runner
-            required: true
-            type: integer
-          - name: challenge_id
-            in: path
-            description: ID of Challenge
-            required: true
-            type: integer         
-        responses:
-          '200':
-            description: Challenge completed
-          '404': 
-            description: Not found the specified challenge or the run so redirect to '/'
+            description: The challenge of the user
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ResponseChallenge'
 
+    /user/{runner_id}/complete_challenge/{challenge_id}:
+      parameters:
+      - in: path
+        name: runner_id
+        description: The id of the user
+        required: true
+        schema:
+          type: integer
+      - in: path
+        name: challenge_id
+        description: The id of the challenge
+        required: true
+        schema:
+          type: integer
+      put:
+        operationId: completeChallenge
+        description: Complete the challenge specied with the run challenger 
+        requestBody:
+          description: The id of the run challenger
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  run_challenger_id:
+                    type: integer
+        responses:
+        responses:
+          '200':
+            description: The challenge succesfully updated
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ResponseChallenge'
+          '404':
+            $ref: '#/components/responses/NotFound'
 
