# beepbeep/challenge_microservice/views/swagger.py
@@ -1,10 +1,9 @@
 import os, requests
 from datetime import datetime, date
-
+from .util import bad_response, generate_dataservice_url
 from flakon import SwaggerBlueprint
 from flask import request, jsonify, redirect
 from beepbeep.challenge_microservice.database import db, Challenge
-from .util import bad_response
 import json
 from json import loads
 
@@ -12,15 +11,17 @@ from json import loads
 HERE = os.path.dirname(__file__)
 YML = os.path.join(HERE, '..', 'static', 'api.yaml')
 api = SwaggerBlueprint('API', __name__, swagger_spec=YML)
+URL_DATASERVICE = generate_dataservice_url()
+
 
 def check_user(runner_id):
-    url = 'http://127.0.0.1:5002/user/' + str(runner_id)
+    url = URL_DATASERVICE + '/user/' + str(runner_id)
     r = requests.get(url)
     result = r.json()
     return 'id' in result
 
 def get_single_run(runner_id, run_id):
-    url = 'http://127.0.0.1:5002/user/' + str(runner_id) + '/runs/' + str(run_id)
+    url = URL_DATASERVICE + '/user/' + str(runner_id) + '/runs/' + str(run_id)
     r = requests.get(url)
     result = r.json()
     return result
@@ -30,6 +31,8 @@ def get_challenge_of_runner_id(runner_id, challenge_id):
                     filter(Challenge.runner_id == runner_id).\
                     filter(Challenge.id == challenge_id).first()
 
+def date_parsing(date):
+    return str(date).replace(" ", "T")+'Z'
 
 
 @api.operation('createChallenge')
@@ -37,20 +40,22 @@ def create_challenge():
     challenge = request.get_json()
     run = get_single_run(challenge['runner_id'], challenge['run_challenged_id'])
     if check_user(challenge['runner_id']) and 'id' in run:
-        if run['runner_id'] == int(challenge['runner_id']):
+        if run['runner_id'] == challenge['runner_id']:
             db_challenge = Challenge()
             db_challenge.runner_id = challenge['runner_id']
             db_challenge.run_challenged_id = challenge['run_challenged_id']
-            db_challenge.start_date = date.today()
+            db_challenge.start_date = datetime.today()
             db.session.add(db_challenge)
             db.session.commit()
-            return {'added': 1}
-    return bad_response(404, 'No user with ID ' + challenge['runner_id'])
+            return "added 1 challenge", 204
+    return bad_response(400, 'No user with ID ' + str(challenge['runner_id']) + 'and run' + str(run['runner_id']))
 
 
 @api.operation('getChallenges')
 def get_challenges(runner_id):
-    url = 'http://127.0.0.1:5002/user/' + str(runner_id)
+    url = URL_DATASERVICE + '/user/' + str(runner_id)
+    print("SETTING")
+    print(generate_dataservice_url())
     r = requests.get(url)
     result = r.json()
     if 'id' in result:
@@ -66,24 +71,23 @@ def get_challenge_id(runner_id, challenge_id):
         return jsonify(challenge.to_json())
     return bad_response(404, 'No challenge with ID ' + str(challenge_id) + ' for user with ID ' + str(runner_id))
 
+#@api.operation('completeChallenge')
+#def complete_challenge(runner_id, challenge_id):
+#    challenge = get_challenge_of_runner_id(runner_id, challenge_id)
+#    if challenge is not None:
+#        if challenge.run_challenger_id is None:
+#            url = URL_DATASERVICE + '/user/' + str(runner_id) + '/runs'
+#            r = requests.get(url, params= {'start-date': date_parsing(challenge.start_date)})
+#            results = r.json()
+#            return jsonify([result for result in results])
+#        else: return jsonify(challenge.to_json())
+#    else: return bad_response(404, 'No challenge with ID ' + str(challenge_id) + ' for user with ID ' + str(runner_id))
+
+
 @api.operation('completeChallenge')
 def complete_challenge(runner_id, challenge_id):
     challenge = get_challenge_of_runner_id(runner_id, challenge_id)
-    if challenge is not None:
-        if challenge.run_challenger_id is None:
-            url = 'http://127.0.0.1:5002/runs/' + str(runner_id)
-            r = requests.get(url)
-            results = r.json()
-            results_filtered = [result for result in results if datetime.fromtimestamp(result['start_date']) > challenge.start_date]
-            return jsonify([result for result in results_filtered])
-        else: return jsonify(challenge.to_json())
-    else: return bad_response(404, 'No challenge with ID ' + str(challenge_id) + ' for user with ID ' + str(runner_id))
-
-
-@api.operation('terminateChallenge')
-def terminate_challenge(runner_id, challenge_id):
-    challenge = get_challenge_of_runner_id(runner_id, challenge_id)
-    run_challenger_id = int(request.get_json()['run_challenger_id'])
+    run_challenger_id = request.get_json()['run_challenger_id']
     if challenge is not None:
         if challenge.run_challenger_id is None:
             run = get_single_run(runner_id, run_challenger_id)
